SFDCProject/src/objects/Audit_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Audit_Type__c</fullName>
        <label>Audit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auto_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Calculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Criteria_Description__c</fullName>
        <label>Criteria Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_Id__c</fullName>
        <label>Criteria Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Criteria_QA_Score_Type__c</fullName>
        <label>Score Type</label>
        <picklist>
            <picklistValues>
                <fullName>Simple</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complex</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criteria_Type__c</fullName>
        <label>Criteria Type</label>
        <picklist>
            <picklistValues>
                <fullName>Installation Method</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EPC Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Code Compliance</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes_Evaluation__c</fullName>
        <label>Notes &amp; Evaluation Guidelines</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Point_Value__c</fullName>
        <label>Point Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority_Criteria__c</fullName>
        <label>Priority Criteria</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>System_Component__c</fullName>
        <label>System Component</label>
        <picklist>
            <picklistValues>
                <fullName>Array</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mounting System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Conductor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Junction Box</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conduit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter (string only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter (all)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AC Disconnect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Audit Criteria</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Audit Criteria Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Criteria</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>